--- a/src/components/main/common.css
+++ b/src/components/main/common.css
@@ -1,15 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('./main.css');
 
 *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   font-family: 'Source Sans Pro', sans-serif;
+   color: var(--color-text-shade);
 }
 
 :root{
    --color-primary: #282b30;
    --color-primary-tint: #424549;
+   --color-primary-shade: #202225;
    
    --color-button: #5865f2;
    --color-button-shade: #4752c4;
+
+   --color-text: white;
+   --color-text-shade: #dcdbde;
 }
