--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -7,7 +7,14 @@
 nav{
    display: flex;
    width: 100%;
-   height: 2rem;
+   height: 2.5rem;
+   background-color: var(--color-primary-shade);
+   align-items: center;
+   justify-content: center;
+   gap: 0.9rem;
+}
+nav a{
+   text-decoration: none;
 }
 
 section{
