made progress on add new post system

--- a/src/components/main/common.css
+++ b/src/components/main/common.css
@@ -20,3 +20,11 @@
    --color-text: white;
    --color-text-shade: #dcdbde;
 }
+
+.input-style{
+   background-color: var(--color-primary-tint);
+   border: none;
+   outline: none;
+   padding: 0.4rem;
+   border-radius: 5px;
+}
