created and stylized "add" page, still needs work

--- a/src/components/main/common.css
+++ b/src/components/main/common.css
@@ -28,3 +28,11 @@
    padding: 0.4rem;
    border-radius: 5px;
 }
+
+.button-style{
+   border: none;
+   background-color: var(--color-button);
+   padding: 0.5rem;
+   border-radius: 5px;
+   color: var(--color-text);
+}
