--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -6,17 +6,42 @@
    padding: 2rem;
 }
 
+#new-post .post-form{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 0.3rem;
+}
+#new-post .post-form input[type="submit"]{
+   margin-top: 0.7rem;
+   display: block;
+}
+
 .post{
    background-color: var(--color-primary-tint);
    display: grid;
    padding: 1rem;
    width: 100%;
+   grid-template: max-content 1fr / 1fr 1fr;
+   gap: 1rem;
 }
 .post .title{
 
 }
 .post .thumbnail{
-   width: auto;
-   height: 9rem;
+   height: auto;
+   width: 100%;
    object-fit: cover;
+   grid-column: span 2;
+}
+
+.post .owner-span{
+   display: flex;
+   flex-direction: column;
+}
+.post .owner-avatar{
+   width: 3.8rem;
+   height: auto;
+   object-fit: cover;
+   border-radius: 50%;
 }
