--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,12 +1,14 @@
 #root{
    display: flex;
    flex-direction: column;
-   height: 100vh;
+   min-height: 100vh;
+   overflow-x: hidden;
+   overflow-y: auto;
 }
 
 html{
    text-align: center;
-   font-size: 16px;
+   font-size: 17px;
 }
 
 nav{
