--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -38,10 +38,27 @@
 .post .owner-span{
    display: flex;
    flex-direction: column;
+   align-items: flex-start;
+}
+.post .owner-name{
+   color: white;
 }
 .post .owner-avatar{
    width: 3.8rem;
    height: auto;
    object-fit: cover;
    border-radius: 50%;
+}
+.post .description-container{
+   grid-column: span 2;
+   display: flex;
+   width: 100%;
+   justify-content: center;
+   background-color: var(--color-primary);
+   padding: 0.5rem;
+   text-align: left;
+}
+.post .description-container p{
+   word-break: break-all;
+   width: 100%;
 }
