--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -22,8 +22,12 @@
    display: grid;
    padding: 1rem;
    width: 100%;
-   grid-template: max-content 1fr / 1fr 1fr;
+   grid-template: max-content 1fr / 4rem 1fr;
    gap: 1rem;
+}
+.post p{
+   word-wrap: break-word;
+   word-break: break-all;
 }
 .post .title{
 
@@ -43,12 +47,22 @@
 .post .owner-name{
    color: white;
 }
+.post .owner-email{
+   word-break: keep-all;
+}
 .post .owner-avatar{
-   width: 3.8rem;
+   width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 50%;
 }
+
+.post .title-span{
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+}
+
 .post .description-container{
    grid-column: span 2;
    display: flex;
@@ -59,6 +73,6 @@
    text-align: left;
 }
 .post .description-container p{
-   word-break: break-all;
+   word-wrap: break-word;
    width: 100%;
 }
