--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -17,6 +17,12 @@
    display: block;
 }
 
+#new-post textarea{
+   width: 100%;
+   height: 4.5rem;
+   font-size: 1rem;
+}
+
 .post{
    background-color: var(--color-primary-tint);
    display: grid;
