added better description in "add" page

--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -44,6 +44,9 @@
    object-fit: cover;
    grid-column: span 2;
 }
+.post .thumbnail-alt{
+   grid-column: span 2;
+}
 
 .post .owner-span{
    display: flex;
