--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -33,7 +33,7 @@
 }
 .post p{
    word-wrap: break-word;
-   word-break: break-all;
+   word-break: break-word;
 }
 .post .title{
 
@@ -74,11 +74,22 @@
    grid-column: span 2;
 }
 
+.post .price-wrapper{
+   display: flex;
+   flex-direction: column;
+   align-items: flex-end;
+}
+
 .post .price-span{
    display: flex;
    justify-content: flex-end;
    height: max-content;
    align-items: center;
+}
+
+.post .location-span{
+   display: flex;
+   gap: 0.2rem;
 }
 
 .post .description-container{
