--- a/src/components/main/home/home.css
+++ b/src/components/main/home/home.css
@@ -1,6 +1,8 @@
 #home{
    padding: 1rem;
    display: flex;
-   flex-direction: column;
-   gap: 1rem;
+   flex-direction: row;
+   gap: 2rem;
+   flex-wrap: wrap;
+   justify-content: center;
 }
