--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -45,4 +45,19 @@ section{
    html{
       font-size: 18px;
    }
+
+   nav{
+      height: 3rem;
+   }
+   nav a{
+      font-size: 1.1rem;
+   }
+   nav .logo{
+      height: 1.8rem;
+      width: 1.8rem;
+   }
+
+   footer{
+      height: 3rem;
+   }
 }
