--- a/src/components/main/common.css
+++ b/src/components/main/common.css
@@ -35,4 +35,14 @@
    padding: 0.5rem;
    border-radius: 5px;
    color: var(--color-text);
+   cursor: pointer;
+}
+.button-style:hover{
+   background-color: var(--color-button-shade);
+}
+
+@media (min-width: 800px){
+   .button-style{
+      font-size: 1rem;
+   }
 }
