--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -29,7 +29,7 @@
    padding: 1rem;
    width: 100%;
    max-width: 22rem;
-   grid-template: repeat(4, max-content) / 1fr 1fr;
+   grid-template: repeat(4, max-content) / 1fr max-content;
    gap: 1rem;
    height: 1fr;
 }
